appserver/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodejs-app
